--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,6 +62,13 @@
 
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:textColor="@color/dark_salmon"
+                app:layout_constraintBottom_toTopOf="@+id/tvUsername"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+            <TextView
                 android:layout_marginTop="10dp"
                 android:id="@+id/tvUsername"
                 android:layout_width="wrap_content"
@@ -87,6 +94,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                 tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:textColor="@color/dark_salmon"
+                app:layout_constraintBottom_toTopOf="@+id/tvPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
             <TextView
                 android:id="@+id/tvPassword"
                 android:layout_width="0dp"
@@ -128,7 +142,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
             <TextView
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnSubmit"
                 android:layout_width="349dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="40dp"
@@ -150,9 +164,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_medium"
-                android:text="@string/don_t_have_an_account_yet"
-                app:layout_constraintStart_toStartOf="@+id/btnLogin"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+                android:text="@string/have_an_account_already"
+                app:layout_constraintStart_toStartOf="@+id/btnSubmit"
+                app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
                 tools:ignore="TextSizeCheck" />
 
             <TextView
@@ -165,7 +179,7 @@
                 android:textColor="@color/golden_rod"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
-                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+                app:layout_constraintEnd_toEndOf="@+id/btnSubmit"
                 tools:ignore="TextSizeCheck,TextContrastCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
