--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,47 +52,90 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_dark_teal_button"
-            android:fontFamily="@font/ptsans_regular"
-            android:padding="8dp"
-            android:text="@string/family_cars"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:background="@drawable/bg_dark_salmon_outside"
-            android:fontFamily="@font/ptsans_regular"
-            android:padding="8dp"
-            android:text="@string/cheap_cars"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:scrollbars="none"
+            tools:ignore="MissingConstraints,UselessParent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:background="@drawable/bg_dark_salmon_outside"
-            android:fontFamily="@font/ptsans_regular"
-            android:padding="8dp"
-            android:text="@string/luxuly_cars"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:scrollbars="none">
 
-        <ImageView
-            android:id="@+id/btnSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="5dp"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_search" />
+                <TextView
+                    android:id="@+id/tvCateAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_dark_salmon_outside"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:padding="8dp"
+                    android:text="@string/all"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvCate1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:background="@drawable/bg_dark_salmon_outside"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:padding="8dp"
+                    android:text="@string/ferrari"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvCate2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:background="@drawable/bg_dark_salmon_outside"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:padding="8dp"
+                    android:text="@string/lamborghini"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvCate3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:background="@drawable/bg_dark_salmon_outside"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:padding="8dp"
+                    android:text="@string/roll_royce"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvCate4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:background="@drawable/bg_dark_salmon_outside"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:padding="8dp"
+                    android:text="@string/exciter"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </HorizontalScrollView>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btnSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:importantForAccessibility="no"
+        android:src="@drawable/ic_search"
+        app:layout_constraintBottom_toBottomOf="@+id/tvNearYou"
+        app:layout_constraintEnd_toEndOf="parent"
+      />
 
     <TextView
         android:id="@+id/tvNearYou"
@@ -108,6 +151,8 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/questrial_regular"
@@ -120,15 +165,15 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="450dp"
         android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="450dp"
         android:layout_marginBottom="60dp"
         android:clipToPadding="false"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ln2"/>
+        app:layout_constraintTop_toBottomOf="@+id/ln2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
